tests/rosetta/out/Swift/call-a-function-6.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:47Z
func bar(_ a: Int, _ b: Int, _ c: Int) {
    print(String(a) + ", " + String(b) + ", " + String(c))
}
func main() {
    var args: [String: Int] = []
    args["a"] = 3
    args["b"] = 2
    args["c"] = 1
    bar(args["a"]!, args["b"]!, args["c"]!)
}
main()
